--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -6,14 +6,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: aruneko/texlive
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
       - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@v2
-        with:
-          root_file:
-            math.tex
+        run: latexmk math.tex
       - name: Upload PDF file
         uses: actions/upload-artifact@v3
         with:
