--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -17,3 +17,9 @@ jobs:
         with:
           name: math
           path: math.pdf
+      - name: Send file math.pdf to discord channel
+      uses: sinshutu/upload-to-discord@master
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      with:
+        args: math.pdf
